force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/User_Session_Tracking__c.object-meta.xml
<CustomObject>
    <label>User Session Tracking</label>
    <nameField>
        <displayFormat>SESSION-{0000000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Session Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>