force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Browser_Info__c.field-meta.xml
<CustomField>
    <fullName>Browser_Info__c</fullName>
    <label>Browser Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>