force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Expected_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeout__c</fullName>
    <label>Expected Timeout</label>
    <type>DateTime</type>
</CustomField>