force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Geographic_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Location__c</fullName>
    <label>Geographic Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>