force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>