force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>