force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Time__c</fullName>
    <label>Login Time</label>
    <type>DateTime</type>
</CustomField>