force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <label>Login URL</label>
    <type>Url</type>
</CustomField>