force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Logout_Time__c.field-meta.xml
<CustomField>
    <fullName>Logout_Time__c</fullName>
    <label>Logout Time</label>
    <type>DateTime</type>
</CustomField>