force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Logout_Type__c.field-meta.xml
<CustomField>
    <fullName>Logout_Type__c</fullName>
    <label>Logout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Browser_Closed</fullName>
                <label>Browser Closed</label>
            </value>
            <value>
                <fullName>Admin_Forced</fullName>
                <label>Admin Forced</label>
            </value>
            <value>
                <fullName>New Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>