force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Platform_Info__c.field-meta.xml
<CustomField>
    <fullName>Platform_Info__c</fullName>
    <label>Platform Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>