force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/Session_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration_Minutes__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Login_Time__c)),
        NOT(ISBLANK(Logout_Time__c))
    ),
    (Logout_Time__c - Login_Time__c) * 24 * 60,
    IF(
        AND(
            NOT(ISBLANK(Login_Time__c)),
            ISBLANK(Logout_Time__c),
            Is_Active__c
        ),
        (NOW() - Login_Time__c) * 24 * 60,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Duration (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>