force-app/main/UtilityComponents/sessionManagement/objects/User_Session_Tracking__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Session Trackings</relationshipLabel>
    <relationshipName>Session_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>